[project]
name = "pymino"
version = "1.3.2.8"
description = "Un proyecto en Python para..."
authors = [
  { name = "DarkyAmagai", email = "darkyamagai@outlook.es" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/DarkyAmagai/pymino"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
