[metadata]
name = pymino
version = 1.2.4.6
author = forevercynical
author_email = me@cynical.gg
description = Easily create a bot for Amino Apps using a modern easy to use synchronous library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/forevercynical/pymino
license = MIT
keywords = amino, pymino, narvii, amino-api, narvii-bots, aminoapps, amino-bot, amino-bots
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires = 
	requests==2.28.2
	ujson==5.5.0
	colorama==0.4.6
	websocket-client==1.4.1
python_requires = >=3.8

[egg_info]
tag_build = 
tag_date = 0

