[metadata]
name = pymino
version = 1.3.1.7
author = forevercynical
author_email = me@cynical.gg
description = Easily create a bot for Amino Apps using a modern easy to use synchronous library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/forevercynical/pymino
license = MIT
keywords = amino, pymino, narvii, amino-api, narvii-bots, aminoapps, amino-bot, amino-bots
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[options.package_data]
* = requirements.txt

[egg_info]
tag_build = 
tag_date = 0

